src/yini_test/cases/golden/lenient/valid/lists/list-of-nulls.yini
@yini

^ Lists
items = [null, null]

