src/yini_test/cases/golden/lenient/invalid/lists/list-with-missing-value.yini
@yini

^ Lists
items = [1, , 3]

